@@ -7,6 +7,7 @@
   - Package =web-mode=.
   - Keybinding =M-s M-s= for ~M-x isearch-forward-thing-at-point~.
   - More abbrevs to ~init-abbrevs.el~
+  - Keybinding =f= to open =xref= definition in the same window.
 
 *** Changed:
   - Improve =rust-mode= usability.
